# minian

./: .gitignore  default_params.yaml  pyproject.toml
minian/: initialization.py  motion_correction.py  pipeline.py  stripe_correction.py
src/minian/: __init__.py  cnmf.py  initialization.py  motion_correction.py  pipeline.py  utilities.py  visualization.py
tests/: test_pipeline.py  toy_data.py
